--- a/package.json
+++ b/package.json
@@ -11,35 +11,105 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0",
-    "@angular/cli": "~14.0.3",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
+    "@agm/core": "^1.1.0",
+    "@angular/animations": "~14.0.0",
+    "@angular/common": "~14.0.0",
+    "@angular/compiler": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
+    "@angular/forms": "~14.0.0",
+    "@angular/localize": "^14.0.0",
+    "@angular/platform-browser": "~14.0.0",
+    "@angular/platform-browser-dynamic": "~14.0.0",
+    "@angular/router": "~14.0.0",
+    "@fullcalendar/angular": "^5.1.0",
+    "@fullcalendar/core": "^5.1.0",
+    "@fullcalendar/daygrid": "^5.1.0",
+    "@fullcalendar/interaction": "^5.1.0",
+    "@fullcalendar/timegrid": "^5.1.0",
+    "@iplab/ngx-file-upload": "^2.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@sweetalert2/themes": "^5.0.2",
+    "amazing-time-picker": "^1.8.0",
+    "angular-archwizard": "^6.1.0",
+    "angular-datatables": "^9.0.2",
+    "angular-dual-listbox": "^5.0.1",
+    "angular-highcharts-chart": "^1.0.2",
+    "angular-pell": "^0.1.0",
+    "angular2-chartjs": "^0.5.1",
+    "angular2-tinymce": "^3.3.0",
+    "apexcharts": "^3.19.3",
+    "bootstrap": "^4.5.0",
+    "datatables.net": "^1.10.21",
+    "datatables.net-buttons": "^1.6.2",
+    "datatables.net-buttons-dt": "^1.6.2",
+    "datatables.net-colreorder": "^1.5.2",
+    "datatables.net-dt": "^1.10.21",
+    "datatables.net-responsive": "^2.2.5",
+    "datatables.net-select": "^1.3.1",
+    "dialogflow": "^1.2.0",
     "express": "^4.18.2",
+    "famfamfam-flags": "^1.0.0",
+    "file-saver": "^2.0.5",
+    "fullcalendar": "^5.1.0",
+    "highcharts": "^8.1.2",
+    "jquery": "^3.6.0",
+    "jszip": "^3.5.0",
+    "lodash-es": "^4.17.15",
+    "mdb-angular-ui-kit": "^1.0.0-beta8",
+    "moment": "^2.27.0",
+    "ng-click-outside": "^6.0.0",
+    "ng-number-formatter": "^1.5.0",
+    "ng-select": "^1.0.2",
+    "ng-snotify": "^9.0.1",
+    "ng2-dragula": "^2.1.1",
+    "ng2-nouislider": "^1.8.2",
+    "ngx-bar-rating": "^1.1.0",
+    "ngx-chips": "^2.1.0",
+    "ngx-color-picker": "^9.1.0",
+    "ngx-currency": "^2.3.3",
+    "ngx-custom-validators": "^9.1.0",
+    "ngx-lightbox": "^2.1.2",
+    "ngx-owl-carousel-o": "^3.0.1",
+    "ngx-perfect-scrollbar": "^8.0.0",
+    "ngx-ui-loader": "^11.0.0",
+    "nouislider": "^14.6.0",
     "path": "^0.12.7",
-    "rxjs": "~7.5.0",
+    "peity": "^3.3.0",
+    "rxjs": "^7.5.0",
+    "rxjs-compat": "^7.5.0",
+    "screenfull": "^5.0.2",
+    "sweetalert2": "^10.0.0",
+    "tinymce": "^4.8.3",
     "tslib": "^2.3.0",
     "typescript": "~4.7.2",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.3",
-    "@angular/cli": "~14.0.3",
-    "@angular/compiler-cli": "^14.0.0",
+    "@angular/cli": "^14.0.3",
+    "@angular/compiler-cli": "^^14.0.3",
+    "@angular/core": "^11.0.9",
+    "@types/datatables.net": "^1.10.19",
+    "@types/datatables.net-buttons": "^1.4.3",
     "@types/jasmine": "~4.0.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.0",
+    "@types/node": "^12.12.47",
+    "codelyzer": "^6.0.0",
     "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~4.1.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-jasmine-html-reporter": "^1..0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
     "typescript": "~4.7.2"
   },
   "engines": {
