--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@agm/core": "^3.0.0",
     "@angular/animations": "~14.0.0",
     "@angular/common": "~14.0.0",
+    "@angular/cli": "~14.0.3",
     "@angular/compiler": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/core": "^14.0.0",
@@ -89,7 +90,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.3",
     "@angular/cli": "^14.0.3",
-    "@angular/compiler-cli": "^^14.0.3",
+    "@angular/compiler-cli": "^^14.0.0",
     "@angular/core": "^14.0.3",
     "@types/datatables.net": "^1.10.19",
     "@types/datatables.net-buttons": "^1.4.3",
