--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "jquery": "^3.6.0",
     "jszip": "^3.5.0",
     "lodash-es": "^4.17.15",
-    "mdb-angular-ui-kit": "^1.0.0-beta8",
-    "moment": "^2.27.0",
+    "mdb-angular-ui-kit": "^3.0.0",
+    "moment": "^2.29.4",
     "ng-click-outside": "^6.0.0",
     "ng-number-formatter": "^1.5.0",
     "ng-select": "^1.0.2",
