--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "^1..0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
