--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^3.0.0-beta.0",
+    "@agm/core": "^3.0.0",
     "@angular/animations": "~14.2.10",
     "@angular/common": "~14.2.10",
     "@angular/cli": "~14.0.3",
