--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~14.2.10",
-    "@angular/common": "~14.2.10",
     "@angular/cli": "~14.0.3",
+    "@angular/common": "~14.2.10",
     "@angular/compiler": "~14.2.10",
     "@angular/compiler-cli": "^14.2.10",
     "@angular/core": "^14.2.10",
@@ -71,6 +71,7 @@
     "path": "^0.12.7",
     "peity": "^3.3.0",
     "rxjs": "^7.5.0",
+    "sass": "^1.56.1",
     "screenfull": "^5.0.2",
     "sweetalert2": "^11.6.8",
     "tinymce": "^4.8.3",
