--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@types/node": "^12.12.47",
     "codelyzer": "^6.0.0",
     "enhanced-resolve": "^3.3.0",
+    "esbuild": "^0.13.4",
     "jasmine-core": "~4.1.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.0",
